--- a/ard_spark/src/main/config/ard.properties
+++ b/ard_spark/src/main/config/ard.properties
@@ -87,7 +87,7 @@ spark.default.databricks = com.databricks:spark-avro_2.11:3.2.0
 spark.default.driver_memory = 4g
 
 # Process Memory
-spark.process.executor_memory = 4g
+spark.process.executor_memory = 6g
 spark.process.num_executors = 12
 spark.process.executor_cores = 1
 
@@ -95,20 +95,21 @@ spark.process.num_executors.us = 24
 spark.process.num_executors.gb = 12
 
 # Join Memory
-spark.join.executor_memory = 4g
+spark.join.executor_memory = 6g
 spark.join.num_executors = 16
 spark.join.executor_cores = 1
 
+spark.join.executor_memory = 8g
 spark.join.num_executors.us = 32
 spark.join.num_executors.gb = 16
 
-
 # ORC Memory
-spark.orc.executor_memory = 4g
+spark.orc.executor_memory = 6g
 spark.orc.num_executors = 10
 spark.orc.executor_cores = 1
 
-spark.orc.num_executors.us = 16
+spark.orc.executor_memory.us = 8g
+spark.orc.num_executors.us = 20
 spark.orc.num_executors.gb = 12
 
 
@@ -241,6 +242,10 @@ hadoop.s3n = s3n
 hadoop.s3a = s3a
 hadoop.s3 = $(hadoop.s3a)
 
+#-----------------
+# Regeneration
+#-----------------
+orc.data.hdfs.re = /data/science_core_ex_new
 
 #-----------------
 # Local Override
@@ -248,9 +253,4 @@ hadoop.s3 = $(hadoop.s3a)
 include = local-share.properties [optional]
 include = local.properties [optional]
 include = dev.properties [optional]
-
-#-----------------
-# Regeneration
-#-----------------
-orc.data.hdfs.re = /data/science_core_ex_new
 
