Removed ard_hive

--- a/ard_spark/src/main/config/ard.properties
+++ b/ard_spark/src/main/config/ard.properties
@@ -176,8 +176,7 @@ ard.default.queue = ard
 # SmartLocation Centroids
 #--------------------------
 # FIXME
-#sl.proj.root = /user/xad
-sl.proj.root = /prod/ard
+sl.proj.root = /user/xad
 sl.output.dir = $(sl.proj.root)/smartlocation/output
 sl.hourly.folder = update_hrly
 sl.hourly.ll.folder = $(sl.hourly.folder)/raw_hrly_ll_centroids
