Added de for modeling

--- a/ard_spark/src/main/config/ard.properties
+++ b/ard_spark/src/main/config/ard.properties
@@ -91,25 +91,24 @@ spark.process.executor_memory = 6g
 spark.process.num_executors = 12
 spark.process.executor_cores = 1
 
-spark.process.num_executors.us = 24
-spark.process.num_executors.gb = 12
-
 # Join Memory
-spark.join.executor_memory = 6g
+spark.join.executor_memory = 8g
 spark.join.num_executors = 16
 spark.join.executor_cores = 1
-
-spark.join.executor_memory = 8g
-spark.join.num_executors.us = 32
-spark.join.num_executors.gb = 16
 
 # ORC Memory
 spark.orc.executor_memory = 6g
 spark.orc.num_executors = 10
 spark.orc.executor_cores = 1
 
+# Country Specific
+spark.process.num_executors.us = 24
+spark.join.num_executors.us = 32
 spark.orc.executor_memory.us = 8g
 spark.orc.num_executors.us = 20
+
+spark.process.num_executors.gb = 12
+spark.join.num_executors.gb = 16
 spark.orc.num_executors.gb = 12
 
 
@@ -135,7 +134,7 @@ science_core.sl.folders = tll pos rest
 #--------------------
 ard.file.success = _SUCCESS
 ard.process.window = L7
-ard.model.countries = us gb
+ard.model.countries = us gb de
 
 #--------------------------
 # Publisher ETL Properties
