Changed serialization format for ard_join command.

--- a/ard_spark/src/main/config/command.properties
+++ b/ard_spark/src/main/config/command.properties
@@ -24,6 +24,10 @@ cmd.s3p    = $(cmd.s3ph)
 cmd.s3hive = 220_ARD_S3_AS_HIVE_PARTITION
 cmd.s3h    = $(cmd.s3hive)
 
+cmd.hdfshive = 221_ARD_HDFS_AS_HIVE_PARTITION
+cmd.hdfsh    = $(cmd.hdfshive)
+
+
 # Cleaning (TBD)
 cmd.clean-hdfs  = 230_ARD_CLEAN_HDFS
 cmd.clean  = $(cmd.clean-hdfs)
