--- a/ard_spark/src/main/config/ard.properties
+++ b/ard_spark/src/main/config/ard.properties
@@ -159,6 +159,7 @@ python.script.ard_reducer = $(proj.python.dir)/ard_reducer_orc.py
 #--------------
 hiveserver.uri = jdbc:hive2://ip-172-17-31-58.ec2.internal:2181,ip-172-17-30-155.ec2.internal:2181,ip-172-17-28-34.ec2.internal:2181/;serviceDiscoveryMode=zooKeeper;zooKeeperNamespace=hiveserver2
 hive.command = HADOOP_CLIENT_OPTS="-Djline.terminal=jline.UnsupportedTerminal" beeline
+hive.version = 2
 
 #------------
 # ARD Gen
