dwell_time_changes

--- a/ard_spark/src/main/config/ard.properties
+++ b/ard_spark/src/main/config/ard.properties
@@ -226,6 +226,13 @@ status_log_local.key.sl.centroid = sl_centroid
 status_log_local.tag.sl.hourly = hourly
 status_log_local.tag.sl.daily  = DAILY
 
+# - New Code
+status_log_local.key.dwell_time_processOne = dwell_time_processOne
+status_log_local.tag.processOne.daily = DAILY
+
+status_log_local.key.dwell_time_processTwo = dwell_time_processTwo
+status_log_local.tag.processTwo.daily = DAILY
+
 
 ##---------------
 ## File Status
