--- a/src/main/config/command.properties
+++ b/src/main/config/command.properties
@@ -12,9 +12,8 @@ cmd.init  = 101_INIT
 #----------------------------
 # Dwell time module
 #----------------------------
-## New Code
-cmd.processOne  = 1007_ProcessOne
-cmd.processTwo  = 1007_ProcessTwo
+cmd.dt_prepare  = 1007_Dwell_Time_Prepare
+cmd.dt_process  = 1007_Dwell_Time_Process
 
 
 #-------
