--- a/src/main/config/dwell_time.properties
+++ b/src/main/config/dwell_time.properties
@@ -53,21 +53,6 @@ lock.file = $(proj.lock.dir)/lock
 #----------------
 # Main Dirs
 hdfs.data.dir  = /data
-hdfs.tmp.dir   = /tmp/ard
-hdfs.prod.dir  = /prod/ard
-
-# Data
-hdfs.data.extract = $(hdfs.data.dir)/extract
-hdfs.data.orc = $(hdfs.data.dir)/science_core_ex
-s3.data.science_core_ex = $(hadoop.s3)://xad-science/dw/science_core_ex
-s3n.data.science_core_ex = $(hadoop.s3n)://xad-science/dw/science_core_ex
-
-# ABD Folders
-hdfs.prod.abd = $(hdfs.prod.dir)/ab_req
-# FIXME: need to be able to generate from code.
-hdfs.prod.empty = $(hdfs.prod.dir)/empty
-hdfs.prod.empty.folder = $(hdfs.prod.empty)/folder
-hdfs.prod.empty.hour = $(hdfs.prod.empty)/hour
 
 #----------------------------
 # Hive Scripts
@@ -81,10 +66,6 @@ proj.hive.tmp.dir    = $(proj.hive.dir)/tmp
 # Spark Scripts
 #----------------------------
 spark.script.model = $(proj.spark.dir)/visit_model.py
-#spark.script.join = $(proj.spark.dir)/ard_join.py
-#spark.script.orc = $(proj.spark.dir)/ard_orc.py
-
-spark.default.databricks = com.databricks:spark-avro_2.11:3.2.0
 spark.default.driver_memory = 4g
 
 # Process Memory
@@ -108,54 +89,23 @@ spark.join.num_executors.us = 32
 spark.orc.executor_memory.us = 8g
 spark.orc.num_executors.us = 20
 
-spark.process.num_executors.gb = 12
-spark.join.num_executors.gb = 16
-spark.orc.num_executors.gb = 12
-
 spark.input.dir = tmp/ade/dwell_time/interim/
-spark.output.dir = tmp/ade/dwell_time/final_3m_ex_all_by_ha_filter/
+spark.output.dir = /prod/dwell_time/data/dwell_time_input/daily/
+#spark.output.dir = tmp/ade/dwell_time/final_3m_ex_all_by_ha_filter/
 
 #----------------------------
 # Default/Common Properties
 #-----------------------------
-default.countries   = us gb in de ca fr cn it es jp au se no nl lu fi dk ch at be nz
+default.countries   = us
 default.logtypes    = exchange display euwest1
-default.logtypes.cn = cnnorth1
-default.logtypes.jp = exchange display euwest1 apnortheast1
-default.logtypes.au = exchange display euwest1 apnortheast1
-default.logtypes.nz = exchange display euwest1 apnortheast1
-
-#--------------------
-# Science Core
-#--------------------
-science_core.fill.folders = fill nf
-science_core.nf.folders = nf
-science_core.sl.folders = tll pos rest
 
 #--------------------
 # Common Properties
 #--------------------
 ard.file.success = _SUCCESS
 ard.process.window = L7
-ard.model.countries = us gb de
+ard.model.countries = us
 
-#--------------------------
-# Publisher ETL Properties
-#--------------------------
-pub.data.prefix.s3 = s3://xad-science/forecast_etl/data
-pub.data.prefix.hdfs = /data/forecast_etl
-pub.events      = hourly_summary
-pub.keep.window = 30
-pub.dates       = L2-1
-pub.tmp.dir     = ${hdfs.tmp.dir}
-
-#---------
-# Python
-#---------
-python.cmd = /opt/anaconda/bin/python2.7
-pyspark.script.split_poi = $(proj.python.dir)/split_poi.py
-python.script.ard_mapper = $(proj.python.dir)/ard_mapper_orc.py
-python.script.ard_reducer = $(proj.python.dir)/ard_reducer_orc.py
 
 #--------------
 # Hive Server
@@ -165,31 +115,11 @@ hiveserver.uri = jdbc:hive2://nn01.corp.xad.com:2181,nn02.corp.xad.com:2181,nn03
 hive.command = HADOOP_CLIENT_OPTS="-Djline.terminal=jline.UnsupportedTerminal" beeline
 hive.version = 2
 
-#------------
-# ARD Gen
-#------------
-ard.input.table = science_core_hrly
-#dwell_time.tmp.table = xianglingmeng.ard_orc
+
 dwell_time.output.table = science_core_orc
 
 dwell_time.default.queue = sv_misc
 #dwell_time.default.queue = ard
-#dwell_time.default.tmp.schema = xianglingmeng.tmp
-#dwell_time.default.join.schema = xianglingmeng.join
-
-#--------------------------
-# SmartLocation Centroids
-#--------------------------
-# FIXME
-sl.proj.root = /user/xad
-sl.output.dir = $(sl.proj.root)/smartlocation/output
-sl.hourly.folder = update_hrly
-sl.hourly.ll.folder = $(sl.hourly.folder)/raw_hrly_ll_centroids
-sl.hourly.ip.folder = $(sl.hourly.folder)/raw_hrly_94_caches
-
-# Control the number delays
-sl.hourly.delay.min = 6
-sl.hourly.delay.max = 24
 
 
 #-------------------
@@ -213,51 +143,21 @@ status_log_local.db.conn.mysql.port = 3306
 #-------
 # - orc
 status_log_local.key.science_core_orc = science_core_orc
-status_log_local.key.add_partition = add_partition
+#status_log_local.key.add_partition = add_partition
 status_log_local.tag.daily = DAILY
-# - s3put 
-status_log_local.key.science_core_s3put = science_core_s3put
-status_log_local.tag.s3put = 
-status_log_local.tag.s3put.daily = DAILY
-# - s3hive 
-status_log_local.key.science_core_s3hive = science_core_s3hive
-status_log_local.tag.s3hive =
-status_log_local.tag.s3hive.daily = DAILY
-# - fixrep (fix repeated loc_score folders)
-status_log_local.key.fixrep = science_core_fixrep
-
-# - Smart Location (foreign)
-status_log_local.key.sl.centroid = sl_centroid
-status_log_local.tag.sl.hourly = hourly
-status_log_local.tag.sl.daily  = DAILY
 
 # - New Code
-status_log_local.key.dwell_time_processOne = dwell_time_processOne
-status_log_local.tag.processOne.daily = DAILY
+status_log_local.key.dwell_time_prepare = dwell_time_prepare
+status_log_local.tag.prepare.daily = DAILY
 
-status_log_local.key.dwell_time_processTwo = dwell_time_processTwo
-status_log_local.tag.processTwo.daily = DAILY
+status_log_local.key.dwell_time_process = dwell_time_process
+status_log_local.tag.process.daily = DAILY
 
 
 ##---------------
 ## File Status
 ##---------------
 proj.status.dir = $(proj.log.dir)/status
-
-#------------
-# S3
-#------------
-s3.access_key = AKIAJQ5GHKKUOYMQLZSQ
-s3.secret_key = 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
-hadoop.s3n = s3n
-hadoop.s3a = s3a
-hadoop.s3 = $(hadoop.s3a)
-
-#-----------------
-# Regeneration
-#-----------------
-orc.data.hdfs.re = /data/science_core_ex_new
-
 
 #-----------------
 # Local Override
