--- a/src/main/config/dwell_time.properties
+++ b/src/main/config/dwell_time.properties
@@ -89,9 +89,9 @@ spark.join.num_executors.us = 32
 spark.orc.executor_memory.us = 8g
 spark.orc.num_executors.us = 20
 
-spark.input.dir = tmp/ade/dwell_time/interim/
-spark.output.dir = /prod/dwell_time/data/dwell_time_input/daily/
-#spark.output.dir = tmp/ade/dwell_time/final_3m_ex_all_by_ha_filter/
+#spark.input.dir = tmp/ade/dwell_time/interim/
+data.hql.output.dir = /prod/dwell_time/data/dwell_time_input/daily/
+data.output.dir = /prod/dwell_time/data/dwell_time/daily/
 
 #----------------------------
 # Default/Common Properties
