--- a/pkg/dwell_time-cron.conf
+++ b/pkg/dwell_time-cron.conf
@@ -1,5 +1,5 @@
 #
-# xpkg configuration file for ard-cron
+# xpkg configuration file for dwell-time-cron
 # 
 
 ROOT = ..
@@ -7,7 +7,7 @@ ROOT = ..
 #------------------------
 # Required Parameters
 #------------------------
-PKG_NAME = ard-cron
+PKG_NAME = dwell_time-cron
 VERSION = `gawk '/^Release/ {print $2; exit}' ${ROOT}/CHANGELOG.md`
 SHORT_DESC = "Cron jobs for xAd copy tools"
 
@@ -17,7 +17,7 @@ POST_SCRIPT = post-cron.sh
 #------------------------
 # Local Parameters
 #------------------------
-PROJ_NAME = ard
+PROJ_NAME = dwell_time
 OWNER = xad
 
 #------------
