--- a/pkg/dwell_time.conf
+++ b/pkg/dwell_time.conf
@@ -9,7 +9,7 @@ ROOT = ..
 #------------------------
 PKG_NAME = dwell_time
 VERSION = `gawk '/^Release/ {print $2; exit}' ${ROOT}/CHANGELOG.md`
-SHORT_DESC = "Abnormal Request Detection"
+SHORT_DESC = "Dwell Time analysis"
 #LONG_DESC = `cat ${ROOT}/README.md`
 #PLATFORM = "x86_64"
 
@@ -63,7 +63,7 @@ FILE ${OWNER} - ${ROOT}/CHANGELOG.* ${PROJ_NAME}/
 # Python Modules
 FILE ${OWNER} - ${SRC_PYTHON_DIR}/*.py ${PROJ_NAME}/python/
 FILE ${OWNER} - ${SRC_PYTHON_DIR}/xad/*.py ${PROJ_NAME}/python/xad/
-FILE ${OWNER} - ${SRC_PYTHON_DIR}/xad/dwell_time/*.py ${PROJ_NAME}/python/xad/dwell_timed/
+FILE ${OWNER} - ${SRC_PYTHON_DIR}/xad/dwell_time/*.py ${PROJ_NAME}/python/xad/dwell_time/
 
 # Spark Scripts
 FILE ${OWNER} - ${SRC_SPARK_DIR}/*.py ${PROJ_NAME}/spark/
