--- a/src/main/config/dwell_time.properties
+++ b/src/main/config/dwell_time.properties
@@ -1,5 +1,5 @@
 #
-# Abnormal Request Location Detection (ARD) properties
+# Dwell Time properties
 #
 # Copyright (C) 2016-2017 xAd, Inc.
 #
@@ -57,8 +57,7 @@ hdfs.data.dir  = /data
 #----------------------------
 # Hive Scripts
 #-----------------------------
-hive.script.ard-gen = $(proj.hive.dir)/ard-gen.hql
-hive.script.ard-gen-partition =  $(proj.hive.dir)/add-partitions.hql
+hive.script.path =  $(proj.hive.dir)/prepare_gen.hql
 
 proj.hive.tmp.dir    = $(proj.hive.dir)/tmp
 
@@ -74,24 +73,25 @@ spark.process.num_executors = 48
 spark.process.executor_cores = 1
 
 # Join Memory
-spark.join.executor_memory = 8g
-spark.join.num_executors = 16
-spark.join.executor_cores = 1
+#spark.join.executor_memory = 8g
+#spark.join.num_executors = 16
+#spark.join.executor_cores = 1
 
 # ORC Memory
-spark.orc.executor_memory = 6g
-spark.orc.num_executors = 10
-spark.orc.executor_cores = 1
+#spark.orc.executor_memory = 6g
+#spark.orc.num_executors = 10
+#spark.orc.executor_cores = 1
 
 # Country Specific
-spark.process.num_executors.us = 24
-spark.join.num_executors.us = 32
-spark.orc.executor_memory.us = 8g
-spark.orc.num_executors.us = 20
+spark.process.num_executors.us = 48
+#spark.join.num_executors.us = 32
+#spark.orc.executor_memory.us = 8g
+#spark.orc.num_executors.us = 20
 
 #spark.input.dir = tmp/ade/dwell_time/interim/
 data.hql.output.dir = /prod/dwell_time/data/dwell_time_input/daily/
 data.output.dir = /prod/dwell_time/data/dwell_time/daily/
+
 
 #----------------------------
 # Default/Common Properties
@@ -102,9 +102,9 @@ default.logtypes    = exchange display euwest1
 #--------------------
 # Common Properties
 #--------------------
-ard.file.success = _SUCCESS
-ard.process.window = L7
-ard.model.countries = us
+dwell_time.file.success = _SUCCESS
+dwell_time.process.window = L7
+dwell_time.model.countries = us
 
 
 #--------------
@@ -115,8 +115,6 @@ hiveserver.uri = jdbc:hive2://nn01.corp.xad.com:2181,nn02.corp.xad.com:2181,nn03
 hive.command = HADOOP_CLIENT_OPTS="-Djline.terminal=jline.UnsupportedTerminal" beeline
 hive.version = 2
 
-
-dwell_time.output.table = science_core_orc
 
 dwell_time.default.queue = sv_misc
 #dwell_time.default.queue = ard
@@ -143,10 +141,8 @@ status_log_local.db.conn.mysql.port = 3306
 #-------
 # - orc
 status_log_local.key.science_core_orc = science_core_orc
-#status_log_local.key.add_partition = add_partition
 status_log_local.tag.daily = DAILY
 
-# - New Code
 status_log_local.key.dwell_time_prepare = dwell_time_prepare
 status_log_local.tag.prepare.daily = DAILY
 
