--- a/src/main/config/dwell_time.properties
+++ b/src/main/config/dwell_time.properties
@@ -1,7 +1,7 @@
 #
 # Dwell Time properties
 #
-# Copyright (C) 2016-2017 xAd, Inc.
+# Copyright (C) 2018 GroundTruth.
 #
 
 include = command.properties
@@ -9,8 +9,8 @@ include = command.properties
 #------------------
 # Review/Override
 #------------------
-###alert.email = science-ops@xad.com
-alert.email = nachappa.ponnappa@groudtruth.com
+alert.email = science-ops@xad.com
+#alert.email = nachappa.ponnappa@groudtruth.com
 alert.email.priority = 1
 
 # process window
@@ -57,8 +57,9 @@ hdfs.data.dir  = /data
 #----------------------------
 # Hive Scripts
 #-----------------------------
+## Choose the flavor option between hive and beeline
+hive.cmdline.flavor = beeline
 hive.script.path =  $(proj.hive.dir)/prepare_gen.hql
-
 proj.hive.tmp.dir    = $(proj.hive.dir)/tmp
 
 #----------------------------
@@ -88,16 +89,11 @@ spark.process.num_executors.us = 48
 #spark.orc.executor_memory.us = 8g
 #spark.orc.num_executors.us = 20
 
-#spark.input.dir = tmp/ade/dwell_time/interim/
-data.hql.output.dir = /prod/dwell_time/data/dwell_time_input/daily/
-data.output.dir = /prod/dwell_time/data/dwell_time/daily/
-
-
 #----------------------------
 # Default/Common Properties
 #-----------------------------
 default.countries   = us
-default.logtypes    = exchange display euwest1
+default.logtypes    = exchange display euwest1 display_dr
 
 #--------------------
 # Common Properties
@@ -105,19 +101,19 @@ default.logtypes    = exchange display euwest1
 dwell_time.file.success = _SUCCESS
 dwell_time.process.window = L7
 dwell_time.model.countries = us
+dwell_time.default.queue = sv_misc
+#dwell_time.default.queue = ard
+data.output.dir = /prod/dwell_time/data/dwell_time/daily/
 
 
 #--------------
 # Hive Server
 #--------------
-###hiveserver.uri = jdbc:hive2://ip-172-17-31-58.ec2.internal:2181,ip-172-17-30-155.ec2.internal:2181,ip-172-17-28-34.ec2.internal:2181/;serviceDiscoveryMode=zooKeeper;zooKeeperNamespace=hiveserver2
-hiveserver.uri = jdbc:hive2://nn01.corp.xad.com:2181,nn02.corp.xad.com:2181,nn03.corp.xad.com:2181/;serviceDiscoveryMode=zooKeeper;zooKeeperNamespace=hiveserver2
+hiveserver.uri = jdbc:hive2://ip-172-17-31-58.ec2.internal:2181,ip-172-17-30-155.ec2.internal:2181,ip-172-17-28-34.ec2.internal:2181/;serviceDiscoveryMode=zooKeeper;zooKeeperNamespace=hiveserver2
+#hiveserver.uri = jdbc:hive2://nn01.corp.xad.com:2181,nn02.corp.xad.com:2181,nn03.corp.xad.com:2181/;serviceDiscoveryMode=zooKeeper;zooKeeperNamespace=hiveserver2
 hive.command = HADOOP_CLIENT_OPTS="-Djline.terminal=jline.UnsupportedTerminal" beeline
 hive.version = 2
-
-
-dwell_time.default.queue = sv_misc
-#dwell_time.default.queue = ard
+data.hql.output.dir = /prod/dwell_time/data/dwell_time_input/daily/
 
 
 #-------------------
@@ -129,12 +125,14 @@ status_log_local.db.type = mysql
 status_log_local.db.conn.mysql.user = etl
 status_log_local.db.conn.mysql.password = etlxaddb
 status_log_local.db.conn.mysql.dbname = xad_etl
+
 # SCI4
-###status_log_local.db.conn.mysql.host = db.ambari.mgmt.xad.com
-###status_log_local.db.conn.mysql.port = 3336
+status_log_local.db.conn.mysql.host = db.ambari.mgmt.xad.com
+status_log_local.db.conn.mysql.port = 3336
+
 # MV1
-status_log_local.db.conn.mysql.host = nn02.corp.xad.com
-status_log_local.db.conn.mysql.port = 3306
+#status_log_local.db.conn.mysql.host = nn02.corp.xad.com
+#status_log_local.db.conn.mysql.port = 3306
 
 #-------
 # Keys
