--- a/src/main/config/dwell_time.properties
+++ b/src/main/config/dwell_time.properties
@@ -58,7 +58,7 @@ hdfs.data.dir  = /data
 # Hive Scripts
 #-----------------------------
 ## Choose the flavor option between hive and beeline
-hive.cmdline.flavor = beeline
+hive.cmdline.flavor = hive
 hive.script.path =  $(proj.hive.dir)/prepare_gen.hql
 proj.hive.tmp.dir    = $(proj.hive.dir)/tmp
 
